--- a/public/project/views/user/templates/homepage.view.client.html
+++ b/public/project/views/user/templates/homepage.view.client.html
@@ -40,6 +40,6 @@
 
 
 
-  <label> Search for Music: </label> <a href="#/user/{{model.userId}}/search"> Search</a>
+  <label> Search for Music: </label> <a href="#/"> Search</a>
     <label> Find friends: </label> <a href="#/user/{{model.userId}}/friends"> Search</a>
 </div>
