--- a/public/project/views/user/templates/login.view.client.html
+++ b/public/project/views/user/templates/login.view.client.html
@@ -53,9 +53,9 @@
 
 
 
-        <input ng-model="model.username" class="form-control" placeholder="username"/>
-        <input ng-model="model.password" class="form-control" type="password" placeholder="password"/>
-        <a class="btn btn-primary btn-block" ng-click="model.login(model)">
+        <input ng-model="user.username" class="form-control" placeholder="username"/>
+        <input ng-model="user.password" class="form-control" type="password" placeholder="password"/>
+        <a class="btn btn-primary btn-block" ng-click="model.login(user)">
             Login
         </a>
 
