--- a/public/project/css/styles.css
+++ b/public/project/css/styles.css
@@ -4,6 +4,8 @@
     top:20px
 
 }
+
+
 #searchButton{
     position : relative;
     left:1160px;
@@ -18,6 +20,10 @@
 }
 #top-pad-1{
     padding-top:10px;
+}
+
+#top-pad-5{
+    padding-top:5px;
 }
 #album-container{
     padding-top: 100px;
@@ -35,6 +41,12 @@
 #album-img1{
     width: 250px;
     height:250%;
+    object-fit: contain;
+}
+
+#thumbnail-img{
+    width: 50px;
+    height:100%;
     object-fit: contain;
 }
 #album-name{
@@ -59,6 +71,89 @@
 .style-5 input[type="text"].focus {
     box-shadow: inset 1px 1px 2px 0 #c9c9c9;
 }
+.center-block {
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
+}
 
+.input-group .icon-addon .form-control {
+    border-radius: 0;
+}
+
+.icon-addon {
+    position: relative;
+    color: #555;
+    display: block;
+}
+
+.icon-addon:after,
+.icon-addon:before {
+    display: table;
+    content: " ";
+}
+
+.icon-addon:after {
+    clear: both;
+}
+
+.icon-addon.addon-md .glyphicon,
+.icon-addon .glyphicon,
+.icon-addon.addon-md .fa,
+.icon-addon .fa {
+    position: absolute;
+    z-index: 2;
+    left: 10px;
+    font-size: 14px;
+    width: 20px;
+    margin-left: -2.5px;
+    text-align: center;
+    padding: 10px 0;
+    top: 1px
+}
+
+.icon-addon.addon-lg .form-control {
+    line-height: 1.33;
+    height: 46px;
+    font-size: 18px;
+    padding: 10px 16px 10px 40px;
+}
+
+.icon-addon.addon-sm .form-control {
+    height: 30px;
+    padding: 5px 10px 5px 28px;
+    font-size: 12px;
+    line-height: 1.5;
+}
+
+.icon-addon.addon-lg .fa,
+.icon-addon.addon-lg .glyphicon {
+    font-size: 18px;
+    margin-left: 0;
+    left: 11px;
+    top: 4px;
+}
+
+.icon-addon.addon-md .form-control,
+.icon-addon .form-control {
+    padding-left: 30px;
+    float: left;
+    font-weight: normal;
+}
+
+.icon-addon.addon-sm .fa,
+.icon-addon.addon-sm .glyphicon {
+    margin-left: 0;
+    font-size: 12px;
+    left: 5px;
+    top: -1px
+}
+
+.icon-addon .form-control:focus + .glyphicon,
+.icon-addon:hover .glyphicon,
+.icon-addon .form-control:focus + .fa,
+.icon-addon:hover .fa {
+    color: #2580db;
+}
 
 
