--- a/public/project/views/user/templates/album.view.client.html
+++ b/public/project/views/user/templates/album.view.client.html
@@ -2,6 +2,7 @@
     <div class="header-nightsky">
         <nav class="navbar navbar-default">
             <div class="container-fluid">
+                <a class="btn btn-success" href="#/"></a>
                 <a  class="navbar-brand" href="#/user/model.userId/home">Muse</a>
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -18,8 +19,8 @@
                     <ul class="nav navbar-nav navbar-right">
 
 
-                        <li ng-if="vm.logged == true"><a href="" ng-click="model.logout()" >Logout</a></li>
-                        <li ng-if="vm.logged == true" class="visible-xs" class="dropdown">
+                        <li ng-if="model.logged == true"><a href="" ng-click="model.logout()" >Logout</a></li>
+                        <li ng-if="model.logged == true" class="visible-xs" class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
                             <ul class="dropdown-menu">
 
@@ -28,14 +29,14 @@
                             </ul>
                         </li>
 
-                        <li ng-if="vm.logged == false"><a href="" ng-click="model.signup()" >Sign Up</a></li>
-                        <li ng-if="vm.logged == false"><a href="" ng-click="model.login()" >Login</a></li>
-                        <li ng-if="vm.logged == false" class="visible-xs" class="dropdown">
+                        <li ng-if="model.logged == false"><a href="#/signup"  >Sign Up</a></li>
+                        <li ng-if="model.logged == false"><a href="#/login"  >Login</a></li>
+                        <li ng-if="model.logged == false" class="visible-xs" class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
                             <ul class="dropdown-menu">
 
-                                <li ><a href="" ng-click="model.signup()" >Sign Up</a></li>
-                                <li ><a href="" ng-click="model.login()" >Login</a></li>
+                                <li ><a href="# /signup"  >Sign Up</a></li>
+                                <li ><a href="#/login"  >Login</a></li>
 
                             </ul>
                         </li>
@@ -48,98 +49,36 @@
 
 <div>
 
-    <div class="container-fluid" id="top-pad" >
-        <div class="row">
-        <img id="album-img" class="col-xs-6"class="pull-right"src="{{model.album.images[1].url}}"></img>
+    <div class="container" id="top-pad" >
+        <div class="container">
+        <img id="album-img"  class="img-responsive col-xs-6"class="pull-right"src="{{model.album.images[1].url}}"></img>
             <div class="col-xs-6">
-        Album:<b>{{model.album.name}}</b>
+        <p class="h2 text-sm-center" style="color:brown">{{model.album.name}}</p>
 
         Artists:
         <span ng-repeat="artist in model.album.artists">
-        <a href="" ng-click="model.getArtistPage(artist.id)">{{artist.name}}</a></span>
+        <a href=""  style="color:black" ng-click="model.getArtistPage(artist.id)">{{artist.name}}</a></span>
         </div>
     </div>
 
 
-    <div  class="container" id="album-container" >
+    <div  class="container-fluid" id="album-container" >
         <ol >
         <div class="row" id="top-pad-1"   ng-repeat="track in model.albumTracks.items">
 
 
-    <div  class="col-xs-4" >
+    <div  class="col-xs-12 col-lg-4" >
         <li>
    <label>{{track.name}}</label>
 
     </div>
 
 
-        <div  class="col-xs-4">
+        <div  class="col-xs-12 col-lg-8">
 
 
             <audio id= "yourAudio" controls  >
 
                 <source src={{model.trust(track["preview_url"])}}>
             </audio>
-            <!--  <a href="" id="audioControl" class="btn btn-sm btn-danger">
-                  <span class="glyphicon glyphicon-music"></span> Listen</a>
-              <button id="audioControl"  type="submit">Play</button>-
-            <script>
-                var yourAudio = document.getElementById('yourAudio'),
-                    ctrl = document.getElementById('audioControl');
-
-                ctrl.onclick = function () {
-
-                    // Update the Button
-                    var pause = ctrl.innerHTML === 'Pause';
-                    ctrl.innerHTML = pause ? 'Play' : 'Pause';
-
-                    // Update the Audio
-                    var method = pause ? 'pause' : 'play';
-                    yourAudio[method]();
-
-                    // Prevent Default Action
-                    return false;
-                };
-            </script>->
-        </div>
-
-
-        <div  class="col-xs-4">
-            <a href="" class="btn btn-sm btn-success"><span class="glyphicon glyphicon-plus"></span> Add to Playlist</a>
-
-    </div>
-            </li>
-
-</div>
-
-        </ol>
-
-        </div>
-
-
-
-
-
-<nav class="navbar navbar-default navbar-fixed-bottom">
-    <div class="header-nightsky">
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">LOGO</a>
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                </div>
-                <div class="collapse navbar-collapse" id="myNavbar">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">HOME</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="" >Contact </a></li>
-
-                    </ul>
-                </div>
             </div>
-        </nav></div>
-</nav>
