--- a/public/project/views/user/templates/friends.view.client.html
+++ b/public/project/views/user/templates/friends.view.client.html
@@ -1,4 +1,3 @@
-
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="header-nightsky">
         <nav class="navbar navbar-default">
@@ -19,12 +18,24 @@
                     <ul class="nav navbar-nav navbar-right">
 
 
-                        <li><a href="" ng-click="model.logout()" >Logout</a></li>
-                        <li class="visible-xs" class="dropdown">
+                        <li ng-if="model.logged == true"><a href="" ng-click="model.logout()" >Logout</a></li>
+                        <li ng-if="model.logged == true" class="visible-xs" class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
                             <ul class="dropdown-menu">
 
                                 <li><a href="" ng-click="model.logout()" >Logout</a></li>
+
+                            </ul>
+                        </li>
+
+                        <li ng-if="model.logged == false"><a href="#/signup"  >Sign Up</a></li>
+                        <li ng-if="model.logged == false"><a href="#/login"  >Login</a></li>
+                        <li ng-if="model.logged == false" class="visible-xs" class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+
+                                <li ><a href="# /signup"  >Sign Up</a></li>
+                                <li ><a href="#/login"  >Login</a></li>
 
                             </ul>
                         </li>
@@ -33,6 +44,7 @@
             </div>
         </nav></div>
 </nav>
+
 <div>
 
     <form>
