--- a/public/project/views/user/templates/home.view.client.html
+++ b/public/project/views/user/templates/home.view.client.html
@@ -2,7 +2,7 @@
     <div class="header-nightsky">
         <nav class="navbar navbar-default">
             <div class="container-fluid">
-                <a  class="navbar-brand" href="#/">Muse</a>
+                <a  class="navbar-brand" href="#/user/model.userId/home">Muse</a>
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                         <span class="icon-bar"></span>
@@ -16,16 +16,26 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
 
                     <ul class="nav navbar-nav navbar-right">
+                        <li ng-if="model.logged == true"><a href="#/user/profile"  >Profile</a></li>
 
-
-                        <li><a href="#/signup" >Sign Up</a></li>
-                        <!--     <li><a href="" ng-click="model.deleteUser(model.user)">Deactivate Account</a></li>-->
-                        <li><a href="#/login" >Login</a></li>
-                        <li class="visible-xs" class="dropdown">
+                        <li ng-if="model.logged == true"><a href="" ng-click="model.logout()" >Logout</a></li>
+                        <li ng-if="model.logged == true" class="visible-xs" class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#/signup" >Sign Up</a></li>
-                                <li><a href="#/login" >Login</a></li>
+
+                                <li><a href="" ng-click="model.logout()" >Logout</a></li>
+
+                            </ul>
+                        </li>
+
+                        <li ng-if="model.logged == false"><a href="#/signup"  >Sign Up</a></li>
+                        <li ng-if="model.logged == false"><a href="#/login"  >Login</a></li>
+                        <li ng-if="model.logged == false" class="visible-xs" class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+
+                                <li ><a href="#/signup"  >Sign Up</a></li>
+                                <li ><a href="#/login"  >Login</a></li>
 
                             </ul>
                         </li>
@@ -35,179 +45,238 @@
         </nav></div>
 </nav>
 
-<form>
+<!----------------------------------------------------SEARCH BAR VIEW----------------------------------------------------------------->
+
+<div>
+
+    <b><h2 style="color:#0066ff" class="container text-center"> What are you looking for today? </h2>
+
+    </b>
+    <form id="top-pad-1">
     <div class="form-group">
-        <input id="searchBar" type="text" name="searchStr" style="width: 800px;"
-               placeholder="Search" ng-model="model.searchStr" class="form-control"/>
-        <button id="searchButton" ng-click="model.search(model.searchStr,model.criteria)" type="submit" style="width: 50px;"
-                class="btn btn-default">
 
-            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-        </button>
-        <div id="searchCriteria">
-            <label>Search By </label>
-            <label class="radio-inline">
-                <input ng-model="model.criteria" type="radio" name="search" value="artist" id=artist />Artist
-            </label>
-            <label class="radio-inline">
-                <input ng-model="model.criteria" type="radio" name="search" value="album" id=album />Album
-            </label>
-            <label class="radio-inline">
-                <input ng-model="model.criteria" type="radio" name="search" value="song" id=song />Song
-            </label>
+        <div class="container text-center">
+
+            <div class="form-group">
+                <div class="input-group input-group-lg">
+
+                    <div class="icon-addon addon-lg">
+                        <input ng-model="model.searchStr" type="text" placeholder="Search" class="form-control"
+                               id="searchStr">
+                        <label for="searchCriteria" class="glyphicon glyphicon-search" rel="tooltip"
+                               title="search"></label>
+                    </div>
+                    <span class="input-group-btn">
+                        <button ng-click="model.search(model.searchStr,model.criteria)"
+                                class="btn btn-default" type="button">Go!</button>
+                    </span>
+                </div>
+
+                <div class="container-fluid">
+                    <label>Search By </label>
+                    <label class="radio-inline">
+                        <input ng-model="model.criteria" type="radio" name="search" value="artist" id=artist/>Artist
+                    </label>
+                    <label class="radio-inline">
+                        <input ng-model="model.criteria" type="radio" name="search" value="album" id=album/>Album
+                    </label>
+                    <label class="radio-inline">
+                        <input ng-model="model.criteria" type="radio" name="search" value="song" id=song/>Song
+                    </label>
+                </div>
+            </div>
+            </div>
         </div>
-        <!--  <button  style="width: 800px;" class="glyphicon glyphicon-search" type="submit"
-                   ng-click="model.search(searchstr)">Search</button>-->
+
+            </form>
     </div>
 
-</form>
+<!-- ----------------------------------------------------SEARCH RESULTS VIEW------------------------------------------------------------- -->
+            <div ng-if="model.searchFlag == true">
 
-<div  ng-show="model.searchFlag" class="container-fluid">
-
-
-    <div  id="top-pad" ng-repeat="track in model.topTracks.tracks">
-        {{track[0].name}}
-        {{track[0].artist.name}}
-
-        <div >
-      <img ng-src="{{track[0].image[3][&quot;#text&quot;]}}"/>
-        </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-
-        </div>
-    </div>
+            <div  ng-switch="model.criteria">
 
 
-<div  ng-switch="model.criteria">
+                <div id="top-pad" class="container">
 
+                <div  ng-switch-when="artist" id="top-pad" ng-repeat="result in model.searchResults.artists.items">
+                    <div  class="container align-content-center">
+                        <div class="col-xs-4">
+                            <a><img class="img-responsive"  ng-src="{{result.images[0].url}}"> </a>
+                        </div>
+                        <div class="col-xs-8">
+                            <h2> <a href="" style="color:#cc3300" ng-click="model.getArtistPage(result.id)">{{result.name}}</a></h2>
+                        </div>
+                    </div>
+                    </br>
+                    </br>
+                </div>
+                    </div>
+                <div id="top-pad" class="container">
 
-    <div  ng-switch-when="artist" id="top-pad" ng-repeat="result in model.searchResults.artists.items">
-        <div  class="row container-fluid">
-            <div class="col-xs-3">
+                    <div  ng-switch-when="album" id="top-pad"   ng-repeat="result in model.searchResults.albums.items">
+                        <div class="col-xs-6">
+                            <div class="container-fluid">
+                                <div id="top-pad-1">
+                                    <img class="img-responsive" ng-src="{{result.images[0].url}}"></img></div>
+                                <div class="text-sm-left"><h4><a style="color:#cc3300" href=""
+                                                                 ng-click="model.getAlbumPage(result.id,result.name)">{{result.name}}
+                                </a></h4></div>
 
+                                <div class="text-sm-left">
+                                    <a href="" ng-click="model.getArtistPage(result.artists[0].id)" style="color:black">{{result.artists[0].name}} </a></div>
+                            </div>
+                            </br>
+                            </br>
+                            </br>
+                        </div>
+                    </div>
 
-                <a><img src={{result.images[0].url}} style="width:250px;height:250px;"> </a>
-            </div>
-            <div class="col-xs-9">
+                </div>
 
-                <a href="" ng-click="model.getArtistPage(result.id)">{{result.name}}</a>
+                <div class="container">
+                <div  ng-switch-when="song" id="top-pad"   ng-repeat="result in model.searchResults.tracks.items">
+                    <div class="col-xs-12 col-lg-6">
+                        <div class="container">
 
-            </div>
-
-        </div>
-        </br>
-        </br>
-
-
-    </div>
-
-    <div  ng-switch-when="album" id="top-pad"   ng-repeat="result in model.searchResults.albums.items">
-        <div id="album-search-temp" class="row container-fluid">
-            <div class="col-xs-2">
-
-                <a><img src={{result.images[0].url}} style="width:250px;height:250px;"> </a>
-            </div>
-            <div class="col-xs-10">
-
-                <ul>
-                    <li><a href=""  ng-click="model.getAlbumPage(result.id,result.name)" >{{result.name}}</a></li>
-                    <li>Artist: <a href="" ng-click="model.getArtistPage(result.artists[0].id)">{{result.artists[0].name}}</a></li>
-
-
-                </ul>
-            </div>
-
-
-        </div>
-        </br>
-        </br>
-
-
-    </div>
-    <div  ng-switch-when="song" id="top-pad"   ng-repeat="result in model.searchResults.tracks.items">
-        <div  class="row container-fluid">
-            <div class="col-xs-3">
-
-                <a><img src={{result.album.images[0].url}} style="width:250px;height:250px;"> </a>
-            </div>
-            <div class="col-xs-9">
-
-
-                {{result.name}}
-                </br>
-
-                Artists:
-                <span ng-repeat="artist in result.artists">
-                    <a href="" ng-click="model.getArtistPage(artist.id)">
-                        {{artist.name}}</a>
-
-                </span>
-                </br>
-                Album:  <a href="" ng-click="model.getAlbumPage(result.album.id,result.album.name)">
-                {{result.album.name}}</a>
-                </br>
-                </br>
-                <!-- <div>
-
-                     Listen :
-                 <audio controls>
-                     <source src={{model.trust(result["preview_url"])}}>
-                 </audio>
-                 </div>-->
-
-
-                <audio id= "yourAudio"  controls>
-
-                    <source src={{model.trust(result["preview_url"])}}>
-                </audio>
-
-                <button id="audioControl" class="btn btn-success" type="submit"
-                        ng-click="model.addToPlaylist(result.id,result.name,result.artists,result.album.name)">Add to Playlist</button>
-
-                <!--
-                <a href="" id="audioControl" class="btn btn-sm btn-danger">
-                    <span class="glyphicon glyphicon-music"></span> Listen</a>
-                 <button id="audioControl"  type="submit">Play</button>
-                <script>
-                    var yourAudio = document.getElementById('yourAudio'),
-                        ctrl = document.getElementById('audioControl');
-
-                    ctrl.onclick = function () {
-
-                        // Update the Button
-                        var pause = ctrl.innerHTML === 'Pause';
-                        ctrl.innerHTML = pause ? 'Play' : 'Pause';
-
-                        // Update the Audio
-                        var method = pause ? 'pause' : 'play';
-                        yourAudio[method]();
-
-                        // Prevent Default Action
-                        return false;
-                    };
-                </script>-->
-
-            </div>
-
-        </div>
-        </br>
-        </br>
-
-
-    </div>
-
-
-
+                                    <div ng-if="model.logged == true && model.spotifyIdList.indexOf(result.id) == -1" > <button id="audioControl" class="btn btn-success" type="submit"
+                                                   ng-click="model.addToPlaylist(result.id,result.name,result.artists,result.album.name)">Add to Favorites</button>
 </div>
+                            <div>
+                                <a><img  class="img-responsive img-fluid" ng-src={{result.album.images[1].url}} > </a>
+                                                        </div>
+                            <div class="text-sm-center" >
+
+                                <audio id= "yourAudio"  controls>
+
+                                    <source src={{model.trust(result["preview_url"])}}>
+                                </audio>
+                            </div>
+
+
+                            <div class="text-sm-center">   <p class="h2"> <a href="" style="color:#cc3300">{{result.name}}</a></p>
+                            </br></div>
 
 
 
+                            <div class="text-sm-left" >
+                                <h3><a href="" ng-click="model.getAlbumPage(result.album.id,result.album.name)">
+                                    Album: {{result.album.name}}</a></h3></div>
+
+
+                            <div class="text-sm-right" ng-repeat="artist in result.artists">
+                 <h4>   <a href="" class="text-sm-right" style="color:black" ng-click="model.getArtistPage(artist.id)">
+                       {{artist.name}}</a> </h4>
+
+                </div>
+                            </br>
+
+                            </br>
+                            </br>
+
+                    </div>
+                    </br>
+                    </br>
+
+                </div>
+                </div>
+                </div>
+                    </div>
+                </div>
 
 
 
+<!---------------------------------------------------POPULAR MOVIES VIEW-------------------------------------------------->
+
+            <div ng-if="model.searchFlag != true && model.logged == true">
+
+            <h1 id="top-pad-5" style="font-weight: bold" class="h1 container-fluid text-center"> Popular Now</h1>
+            <div id="top-pad" class="container">
+                <div class="col-lg-7 col-xs-6">
+
+                <div  ng-repeat="track in model.topTracks.tracks.track">
 
 
+                        <div class="container">
+
+                            <div id="top-pad-1">
+                                <img class="img-responsive" ng-src="{{track.image[3][&quot;#text&quot;]}}"></img></div>
+                            <div class="text-sm-left"><h4><a style="color:#cc3300" href=""
+                                                             ng-click="model.getAlbumPage(album.id)">
+                                {{track.name}}</a></h4></div>
+
+                            <div class="container-fluid text-sm-left">
+                                <a href="" ng-click="model.getArtistPage(track.artist.name)" style="color:black"> {{track.artist.name}}</a></div>
+
+                        </div>
+                        </br>
+                        </br>
+                        </br>
+                    </div>
+                    </div>
+                <div class="col-lg-5 col-xs-6">
+                    <h3>Find friends</h3>
+
+                    <div class="input-group input-group-lg">
+
+                        <div class="icon-addon addon-lg">
+                            <input ng-model="model.searchFriend" type="text" placeholder="Search" class="form-control"
+                                   id="searchFriend">
+                            <label for="searchCriteria1" class="glyphicon glyphicon-search" rel="tooltip"
+                                   title="search"></label>
+                        </div>
+                        <span class="input-group-btn">
+                        <button ng-click="model.searchFriends(model.searchFriend)"
+                                class="btn btn-default" type="button">Go!</button>
+                    </span>
+                    </div>
+                    <div id="top-pad"  ng-repeat="person in model.people">
+                        <img class="img-rounded img-responsive"  width="50" src="{{person.img}}" alt=""></img>
+
+                    <a href="#/user/{{model.userId}}/friends/{{person._id}}">{{person.firstName}} {{person.lastName}}</a>
+
+
+                </div>
+
+
+                </div>
+
+
+            </div>
+            </div>
+
+<!-- --------------------------------------------------------------------------------------------------------->
+
+<div ng-if="model.searchFlag != false && model.logged == false">
+
+    <h1 id="top-pad-5" style="font-weight: bold" class="h1 container-fluid text-center"> Popular Now</h1>
+    <div id="top-pad" class="container">
+
+
+            <div  ng-repeat="track in model.topTracks.tracks.track">
+                <div class="col-lg-4 col-xs-12">
+
+                <div class="container">
+
+                    <div id="top-pad-1">
+                        <img class="img-responsive" ng-src="{{track.image[3][&quot;#text&quot;]}}"></img></div>
+                    <div class="text-sm-left"><h4><a style="color:#cc3300" href=""
+                                                     ng-click="model.getAlbumPage(album.id)">
+                        {{track.name}}</a></h4></div>
+
+                    <div class="container-fluid text-sm-left">
+                        <a href="" ng-click="model.getArtistPage(track.artist.name)" style="color:black"> {{track.artist.name}}</a></div>
+
+                </div>
+                </br>
+                </br>
+                </br>
+            </div>
+        </div>
+
+
+
+    </div>
 </div>
 
 
