--- a/public/project/views/user/templates/public-profile.view.client.html
+++ b/public/project/views/user/templates/public-profile.view.client.html
@@ -18,12 +18,24 @@
                     <ul class="nav navbar-nav navbar-right">
 
 
-                        <li><a href="" ng-click="model.logout()" >Logout</a></li>
-                        <li class="visible-xs" class="dropdown">
+                        <li ng-if="model.logged == true"><a href="" ng-click="model.logout()" >Logout</a></li>
+                        <li ng-if="model.logged == true" class="visible-xs" class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
                             <ul class="dropdown-menu">
 
                                 <li><a href="" ng-click="model.logout()" >Logout</a></li>
+
+                            </ul>
+                        </li>
+
+                        <li ng-if="model.logged == false"><a href="#/signup"  >Sign Up</a></li>
+                        <li ng-if="model.logged == false"><a href="#/login"  >Login</a></li>
+                        <li ng-if="model.logged == false" class="visible-xs" class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+
+                                <li ><a href="# /signup"  >Sign Up</a></li>
+                                <li ><a href="#/login"  >Login</a></li>
 
                             </ul>
                         </li>
@@ -34,23 +46,32 @@
 </nav>
 
 
-<div class="container-fluid">
+<div class="container">
     <div class="row">
         <div class="fb-profile">
           <!--  <img align="left" class="fb-image-lg" src="../../../img/music-header.jpg" alt="Profile image example"/>-->
-            <div id="top-pad">
+            <div  id="top-pad">
                <!-- <img src="{{model.user.img}}" class="avatar img-circle img-thumbnail" alt="No profile image">-->
-            <img align="left" class="fb-image-profile thumbnail" src="{{model.friend.img}}" alt="No profile image"/>
-            <div class="fb-profile-text">
+                <div class="col-xs-12 col-lg-3">
+            <img  class="img-responsive" align="left" class="fb-image-profile thumbnail" src="{{model.friend.img}}" alt="No profile image"/>
+                </div>
+                <div class="col-xs-12 col-lg-9 ">
+                <div class="fb-profile-text">
                 <h1>{{model.friend.firstName}} {{model.friend.lastName}}</h1>
-            </div>
 
+            </div>
+                <div>
+                  <b>  {{model.followersCount}} followers </b>
+                </div>
+            <div class="container" id="top-pad-5">
                 <span ng-if="model.following == false">
                 <button  class="btn btn-success" ng-click="model.follow()">Follow</button>
                     </span>
                 <span ng-if="model.following == true"  >
                    <button class="btn btn-success" ng-click="model.unfollow()">Unfollow</button>
                 </span>
+            </div>
+                </div>
 
 
 
@@ -83,14 +104,14 @@
                         {{model.friend.about}}
 
                     </div>
-                    <div class="tab-pane" id="tab_default_2" ng-show="tab=='basic'">
-                        basic info
+                    <div class="tab-pane active" id="tab_default_2" ng-show="tab=='basic'">
+
+                        <div ><b>City:      </b>    {{model.friend.city}}</div>
+                     <div> <b>  Email:     </b>{{model.friend.email}} </div>
+
 
                     </div>
 
-                    <div class="tab-pane" id="tab_default_4">
-
-                    </div>
                 </div>
             </div>
         </div>
@@ -99,14 +120,15 @@
     <div class="col-sm-4">
 
         <div class="panel panel-warning">
-            <div class="panel-heading">Playlist</div>
+            <div class="panel-heading"><center>Favorites</center></div>
 
             <div class="panel-body">
 <ol>
-                <li ng-repeat="item in model.friend.playlist">
+                <li ng-repeat="item in model.favorites">
                  <i>{{item.song}}</i> by
 
                     <span ng-repeat="artist in item.artists">
+
                        <a href="" ng-click="model.getArtistPage(artist.id)"> {{artist.name}}</a>
                         </span>
 
