--- a/public/project/views/user/templates/album.view.client.html
+++ b/public/project/views/user/templates/album.view.client.html
@@ -1,3 +1,4 @@
+<div id="bg1">
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="header-nightsky">
         <nav class="navbar navbar-default">
@@ -43,7 +44,8 @@
                     </ul>
                 </div>
             </div>
-        </nav></div>
+        </nav>
+    </div>
 </nav>
 
 
@@ -55,9 +57,8 @@
             <div class="col-xs-6">
         <p class="h2 text-sm-center" style="color:brown">{{model.album.name}}</p>
 
-        Artists:
         <span ng-repeat="artist in model.album.artists">
-        <a href=""  style="color:black" ng-click="model.getArtistPage(artist.id)">{{artist.name}}</a></span>
+        <a href=""  style="color:white" ng-click="model.getArtistPage(artist.id)">{{artist.name}}</a></span>
         </div>
     </div>
 
@@ -69,7 +70,8 @@
 
     <div  class="col-xs-12 col-lg-4" >
         <li>
-   <label>{{track.name}}</label>
+   <label style="color:white">{{track.name}}</label>
+        </li>
 
     </div>
 
@@ -82,3 +84,6 @@
                 <source src={{model.trust(track["preview_url"])}}>
             </audio>
             </div>
+
+
+    </div>
