--- a/public/project/views/user/templates/artist.view.client.html
+++ b/public/project/views/user/templates/artist.view.client.html
@@ -1,3 +1,5 @@
+<div id="bg1">
+
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="header-nightsky">
         <nav class="navbar navbar-default">
@@ -71,7 +73,6 @@
                        <a href=""  style="color:brown;text-decoration: none"  ng-click="model.getAlbumPage(album.id)"> {{album.name}}</a></p></div>
                 </li>
 
-                </li>
 
         </div>
 </br>
@@ -80,4 +81,5 @@
     </ol>
         </div>
 
+</div>
 </div>
