login fixed with encryption

--- a/public/project/views/user/templates/profile.view.client.html
+++ b/public/project/views/user/templates/profile.view.client.html
@@ -65,7 +65,7 @@
         <div class="col-md-4 col-sm-6 col-xs-12">
 
             <div class="text-center">
-                <img src="{{model.user.img}}" class="avatar img-circle img-thumbnail" onerror="this.src='no-user.png';" alt="No profile image">
+                <img src="{{model.user.img}}" class="avatar img-circle img-thumbnail" alt="No profile image">
 
                 <h6>Upload a different photo...</h6>
                 <!--
